--- a/src/component/Join/Join.css
+++ b/src/component/Join/Join.css
@@ -1,9 +1,12 @@
 .join{
-  display: flex;
-  padding:  0 2rem;
-  gap: 10rem;
-
+  display:flex;
+  padding:0 2rem;
+  gap:10rem;
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 100%;
 }
+
 .left-j{
   color: white;
   font-size: 3rem;
