--- a/src/component/Program/Program.css
+++ b/src/component/Program/Program.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: 0 2rem;
+    padding:3rem 2rem 0;
 }
 
 .programs-header{
@@ -19,6 +19,9 @@
 .programs-categories{
     display: flex;
     gap: 1rem;
+    max-width: 1440px;
+    margin: 0 auto;
+    width: 100%;
 }
 .category{
     display: flex;
