--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -6,8 +6,7 @@
     list-style: none;
     display: flex;
     gap: 2rem;
-    color: white;
-}
+    color: white;}
 .header-menu>li{
     cursor: pointer;
 }
